Feito mudanças de verificações, para validação de dados, adicionado campo de satatus na locacao, para não apgar e assim manter o hisotiri co e tambem feitos todos ajudestes necessários na tela de devolucao de equipamento no botao buscar e confirmar. também feito padronizaçao no valor da multa para sempre estar em porcentagem

--- a/TrabalhoPraticoII/src/main/java/gui/SistemaConstrutecGUI.form
+++ b/TrabalhoPraticoII/src/main/java/gui/SistemaConstrutecGUI.form
@@ -367,7 +367,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="txtMulta" max="32767" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="lblAviso1" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblAviso1" min="-2" pref="242" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
